tidy up the layout and create text to speech in the confirmation activity

--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -15,7 +15,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/confirmation_layout"
-        android:layout_width="355dp"
+        android:layout_width="match_parent"
         android:layout_height="800dp">
 
 
