--- a/app/src/main/res/layout/activity_nav.xml
+++ b/app/src/main/res/layout/activity_nav.xml
@@ -49,6 +49,7 @@
             android:layout_marginTop="90dp"
             android:layout_marginStart="20dp"
             android:gravity="center_horizontal|top"
+            android:textColor="@color/black"
             android:text="@string/lat"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -60,6 +61,7 @@
             android:layout_marginTop="50dp"
             android:layout_marginStart="20dp"
             android:gravity="center_horizontal|top"
+            android:textColor="@color/black"
             android:text="@string/lon"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -72,8 +74,12 @@
             android:layout_marginTop="130dp"
             android:gravity="center_horizontal|top"
             android:text="@string/azimuth"
+            android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold" />
+
+
+
 
     </androidx.cardview.widget.CardView>
 
